Fix layout shift

--- a/frontend/src/metabase/ui/components/inputs/PillsInput/PillsInput.module.css
+++ b/frontend/src/metabase/ui/components/inputs/PillsInput/PillsInput.module.css
@@ -1,5 +1,6 @@
 .field {
   font-size: var(--mantine-font-size-md);
+  height: 1.5rem;
 
   &::placeholder {
     color: var(--mb-color-text-tertiary);
